# dstrmaysam-finpilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  buildspec.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_api.bat  run_api.ps1  run_app.bat  run_app.ps1
.streamlit/: config.toml
data/evaluation/: golden_dataset.json
infra/: aws-ecs-fargate.yaml  cloudwatch-dashboard-finpilot.json  eventbridge-pipelines.md  finpilot-pipeline.yml  observability.md  quality-measurement.md
scripts/: evaluate_quality.py
src/finpilot/: __init__.py  api.py  financial_tools.py  observability.py  tracing.py
src/finpilot/agents/: __init__.py  company.py  earnings.py  market.py  news.py  orchestrator.py  reflection.py  research.py  trading.py
src/finpilot/chat/: __init__.py  assistant.py  storage.py
src/finpilot/core/: __init__.py  models.py  runtime.py  settings.py
src/finpilot/evaluation/: __init__.py  dataset.py  fixtures.py  metrics.py  runner.py
src/finpilot/prompts/: __init__.py  catalog.py  research_synthesis.v1.json
src/finpilot/trading/: __init__.py  paper.py
src/finpilot_mcp/: __init__.py  client.py  server.py
src/finpilot_mcp/data/: __init__.py  yahoo_finance.py
tests/: test_chat_assistant.py  test_groww_market_data.py  test_mcp_financial_client.py  test_observability.py  test_quality_evaluation.py  test_research_workflow.py  test_runtime.py  test_trading_agent.py  test_yahoo_finance.py
